--- a/index.htm
+++ b/index.htm
@@ -1,8 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>µçÄÔÅäÖÃÇåµ¥</title>
+<title>ç”µè„‘é…ç½®æ¸…å•</title>
 <style type="text/css">
 <!--
 body {margin-left: 0px;margin-top: 0px;margin-right: 0px;margin-bottom: 0px;}
@@ -32,44 +34,44 @@ table#reports th {margin: 0px; border: 1px solid #000000;}
 			<td height="80">
 			<table width="100%">
 			<tr >
-				<td width="100%" valign="top" class="logo" align="center">µçÄÔÅäÖÃÇåµ¥</td>
+				<td width="100%" valign="top" class="logo" align="center">ç”µè„‘é…ç½®æ¸…å•</td>
 			</tr>
 			</table>
 			</td>
 		</tr>
 		<tr>
-			<td><table width="100%"><tr><td width ="30%" align="left">¿Í»§ĞÕÃû: <U>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</U></td><td width ="40%" align="left">ÁªÏµ·½Ê½: <U>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</U></td><td width ="30%" align="right"><U>2020</U>Äê<U>05</U>ÔÂ<U>22</U>ÈÕ</td></tr></table></td>
+			<td><table width="100%"><tr><td width ="30%" align="left">å®¢æˆ·å§“å: <U>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</U></td><td width ="40%" align="left">è”ç³»æ–¹å¼: <U>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</U></td><td width ="30%" align="right"><U>2020</U>å¹´<U>05</U>æœˆ<U>22</U>æ—¥</td></tr></table></td>
 		</tr>
 		
 		<tr>
 			<td>
 			<br>
 			<table width="100%" id="reports">
-				<tr class="reports_item_1"><td width="12%"><B>Ãû³Æ</B></td><td width="66%"><B>ĞÍºÅ</B></td><td width="12%"><B>µ¥¼Û</B></td><td width="12%"><B>ÖÊ±£</B></td></tr>
-				<tr class="reports_item_1"><td><B>´¦ÀíÆ÷(CPU)</B></td><td>Ó¢ÌØ¶û µÚ¶ş´ú¿áî£ i3-2100 @ 3.10GHz Ë«ºË</td><td>34r</td><td>Ã»µÃ</td></tr>
-				<tr class="reports_item_1"><td><B>Ö÷	°å</B></td><td>Î¢ĞÇ H61M-P35 (MS-7680)</td><td>95r</td><td>3ÔÂ</td></tr>				
-				<tr class="reports_item_1"><td><B>ÄÚ	´æ</B></td><td>2 GB ( ½ğÊ¿¶Ù DDR3 1333MHz )</td><td>14.5r</td><td>Ò»Äê</td></tr>
-				<tr class="reports_item_1"><td><B>Ó²	ÅÌ</B></td><td>Ï£½İ ST3320418AS ( 320 GB / 7200 ×ª/·Ö )</td><td>29r</td><td>Ò»Äê</td></tr>
-				<tr class="reports_item_1"><td><B>ÏÔ	¿¨</B></td><td>Ó¢ÌØ¶û HD Graphics ( 256 MB / Î¢ĞÇ )</td><td>¼¯ÏÔ</td><td>Ëæcpu</td></tr>
-				<tr class="reports_item_1"><td><B>ÏÔÊ¾Æ÷</B></td><td>×°»úÍ¶Ó°ÒÇ£¬ºóÆÚÔ¶³Ì£¬Òª¸öÃ«µÄÏÔÊ¾Æ÷</td><td>0r</td><td>ÎŞ</td></tr>
-				<tr class="reports_item_1"><td><B>¹âÇı</B></td><td>ÏÈ·æ DVD-ROM DVD-231 DVD¹âÇı</td><td>10r</td><td>Ã»µÃ</td></tr>
-				<tr class="reports_item_1"><td><B>»úÏä</B></td><td>´óË®Å£ĞÍºÅÃ»²éµ½</td><td>20r</td><td>Ã»µÃ</td></tr>
-				<tr class="reports_item_1"><td><B>µçÔ´</B></td><td>½ğºÓÌï230w</td><td>10r</td><td>Ã»µÃ</td></tr>
-				<tr class="reports_item_1"><td><B>¼üÅÌ/Êó±ê</B></td><td>ÎŞ</td><td>0r</td><td>ÎŞ</td></tr>
-				<tr class="reports_item_1"><td><B>ÒôÏä</B></td><td>ÎŞ</td><td>0r</td><td>ÎŞ</td></tr>
-				<tr class="reports_item_1"><td><B>ÆäËû</B></td><td>vgaÏß*1 8r£»µçÔ´Ïß*1 5r£»É¢ÈÈÆ÷*1 19.9r£»ÔË·Ñ10r</td><td>42.9r</td><td>ÎŞ</td></tr>
-				<tr class="reports_item_1"><td><B>×Ü¼Æ</B></td><td colspan="3">255.4r</td></tr>
+				<tr class="reports_item_1"><td width="12%"><B>åç§°</B></td><td width="66%"><B>å‹å·</B></td><td width="12%"><B>å•ä»·</B></td><td width="12%"><B>è´¨ä¿</B></td></tr>
+				<tr class="reports_item_1"><td><B>å¤„ç†å™¨(CPU)</B></td><td>è‹±ç‰¹å°” ç¬¬äºŒä»£é…·ç¿ i3-2100 @ 3.10GHz åŒæ ¸</td><td>34r</td><td>æ²¡å¾—</td></tr>
+				<tr class="reports_item_1"><td><B>ä¸»	æ¿</B></td><td>å¾®æ˜Ÿ H61M-P35 (MS-7680)</td><td>95r</td><td>3æœˆ</td></tr>				
+				<tr class="reports_item_1"><td><B>å†…	å­˜</B></td><td>2 GB ( é‡‘å£«é¡¿ DDR3 1333MHz )</td><td>14.5r</td><td>ä¸€å¹´</td></tr>
+				<tr class="reports_item_1"><td><B>ç¡¬	ç›˜</B></td><td>å¸Œæ· ST3320418AS ( 320 GB / 7200 è½¬/åˆ† )</td><td>29r</td><td>ä¸€å¹´</td></tr>
+				<tr class="reports_item_1"><td><B>æ˜¾	å¡</B></td><td>è‹±ç‰¹å°” HD Graphics ( 256 MB / å¾®æ˜Ÿ )</td><td>é›†æ˜¾</td><td>éšcpu</td></tr>
+				<tr class="reports_item_1"><td><B>æ˜¾ç¤ºå™¨</B></td><td>è£…æœºæŠ•å½±ä»ªï¼ŒåæœŸè¿œç¨‹ï¼Œè¦ä¸ªæ¯›çš„æ˜¾ç¤ºå™¨</td><td>0r</td><td>æ— </td></tr>
+				<tr class="reports_item_1"><td><B>å…‰é©±</B></td><td>å…ˆé”‹ DVD-ROM DVD-231 DVDå…‰é©±</td><td>10r</td><td>æ²¡å¾—</td></tr>
+				<tr class="reports_item_1"><td><B>æœºç®±</B></td><td>å¤§æ°´ç‰›å‹å·æ²¡æŸ¥åˆ°</td><td>20r</td><td>æ²¡å¾—</td></tr>
+				<tr class="reports_item_1"><td><B>ç”µæº</B></td><td>é‡‘æ²³ç”°230w</td><td>10r</td><td>æ²¡å¾—</td></tr>
+				<tr class="reports_item_1"><td><B>é”®ç›˜/é¼ æ ‡</B></td><td>æ— </td><td>0r</td><td>æ— </td></tr>
+				<tr class="reports_item_1"><td><B>éŸ³ç®±</B></td><td>æ— </td><td>0r</td><td>æ— </td></tr>
+				<tr class="reports_item_1"><td><B>å…¶ä»–</B></td><td>vgaçº¿*1 8rï¼›ç”µæºçº¿*1 5rï¼›æ•£çƒ­å™¨*1 19.9rï¼›è¿è´¹10r</td><td>42.9r</td><td>æ— </td></tr>
+				<tr class="reports_item_1"><td><B>æ€»è®¡</B></td><td colspan="3">255.4r</td></tr>
 			</table>
 			</td>
 		</tr>
 		<tr>
 				<td>
 					<br>
-					<table width="100%"><tr><td width ="40%" align="left">¹«Ë¾: <U>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</U></td><td width ="30%" align="left">ÁªÏµ·½Ê½: <U>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</U></td><td width ="30%" align="left">±¸×¢: <U></U></td></tr></table></td>
+					<table width="100%"><tr><td width ="40%" align="left">å…¬å¸: <U>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</U></td><td width ="30%" align="left">è”ç³»æ–¹å¼: <U>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</U></td><td width ="30%" align="left">å¤‡æ³¨: <U></U></td></tr></table></td>
 		</tr>
 
 		<tr>
-			<td height="10" Align="center">±¾ÅäÖÃÇåµ¥ÓÉ Â³´óÊ¦ V5.1020.1190.515 Éú³É</td>
+			<td height="10" Align="center">æœ¬é…ç½®æ¸…å•ç”± é²å¤§å¸ˆ V5.1020.1190.515 ç”Ÿæˆ</td>
 		</tr>
 		</table>	
 	</td>
