--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
@@ -71,7 +70,7 @@ table#reports th {margin: 0px; border: 1px solid #000000;}
 		</tr>
 
 		<tr>
-			<td height="10" Align="center">本配置清单由 鲁大师 V5.1020.1190.515 生成</td>
+			
 		</tr>
 		</table>	
 	</td>
